# prompt-pack-lint

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/prompts/: support-summary.md
src/prompt_pack_lint/: __init__.py  __main__.py  cli.py  linter.py  models.py  parser.py
tests/: test_linter.py
